Use the Construction videos now (instead of MARE)

--- a/mare/templates/video.html
+++ b/mare/templates/video.html
@@ -34,7 +34,7 @@
                     plugins:  {
                         rtmp: {
                             url: 'flowplayer.rtmp-3.2.3.swf',
-                            netConnectionUrl: 'rtmp://s17k5dj3abuf5u.cloudfront.net/cfx/st',
+                            netConnectionUrl: 'rtmp://s25yxt9d51qx7q.cloudfront.net/cfx/st',
                             durationFunc: 'getStreamLength'
                         }
                     },
