--- a/mare/templates/layout.html
+++ b/mare/templates/layout.html
@@ -32,17 +32,10 @@
         {% block header %} {% endblock %}
 <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-27513053-1']);
-  _gaq.push(['_setDomainName', 'none']);
-  _gaq.push(['_setAllowLinker', true]);
-  _gaq.push(['_trackPageview']);
-
-//  (function() {
-//    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-//    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-//    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-//  })();
+     var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-32820091-1']);
+      _gaq.push(['_setDomainName', 'massconstructionschool.com']);
+      _gaq.push(['_trackPageview']);
 
 </script>
 
