--- a/cons/templates/layout.html
+++ b/cons/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>{% block title %}Welcome{% endblock %} | MASS-RealEstateSchool.com</title>
+        <title>{% block title %}Welcome{% endblock %} | massconstructionschool.com</title>
 
 
 
@@ -60,7 +60,7 @@
 
 
         <div class=page>
-            <h1>MASS-RealEstateSchool.com</h1>
+            <h1>massconstructionschool.com</h1>
             <div class=navigation>
                 
 
@@ -99,7 +99,7 @@
                 {% block body %}{% endblock %}
             </div>
             <div class=footer>
-                <a href="http://MASS-RealEstateSchool.com"><strong>MASS-RealEstateSchool.com</strong></a>
+                <a href="http://massconstructionschool.com"><strong>massconstructionschool.com</strong></a>
                 <a style="float:right;" href="{{ url_for('accounts.contact') }}"><strong>contact us</strong></a>
             </div>
 
@@ -109,55 +109,7 @@
             <center>
                 <ul style="list-style-type:none;line-height:1.5em">
                     <li>
-                    <a href="http://www.mass.gov/ocabr/licensee/dpl-boards/re/ceu/continuing-education-subject-matter-curricula/re57r07.html">Course Outline - Brokerage Relationships</a>
-                    </li>
-                    <li>
-                    <a href="http://www.mass.gov/ocabr/licensee/dpl-boards/re/ceu/continuing-education-subject-matter-curricula/re05rc01-contract-law.html">Course Outline - Contract Law</a>
-                    </li>
-                    <li>
-                    <a href="http://www.mass.gov/ocabr/licensee/dpl-boards/re/ceu/continuing-education-subject-matter-curricula/re09r07.html">Course Outline - Residential Rentals</a>
-                    </li>
-                    <li>
-                    <a href="http://www.mass.gov/ocabr/licensee/dpl-boards/re/ceu/continuing-education-subject-matter-curricula/re27rc71.html">Course Outline - 1031 Exchanges</a>
-                    </li>
-                    <li>
-                    <a href="http://www.mass.gov/ocabr/licensee/dpl-boards/re/ceu/continuing-education-subject-matter-curricula/re25rc08.html">Course Outline - Financing</a>
-                    </li>
-                    <li>
-                    <a href="http://www.mass.gov/ocabr/licensee/dpl-boards/re/ceu/continuing-education-subject-matter-curricula/re04r08-chapter-93a.html">Course Outline - Chapter 93A</a>
-                    </li>
-                    <li>
-                    <a href="http://shawneveret.com/2mikes/mare/MARES_CE_CourseOutline.doc">Course Outline and Policies</a>
-                    </li>
-                    <li>
-                    <a href="http://www.surveymonkey.com/s/5DXCNQL">Continuing Education Customer Survey</a>
-                    </li>
-                </ul>
-
-                <hr>
-                <ul style="list-style-type:none;line-height:1.5em">
-                    <li>
-                    <a href="http://www.proprofs.com/quiz-school/story.php?title=ma-real-estate-continuing-education-2brokerage-relationships">Quiz 1 - Brokerage Relationships</a>
-                    </li>
-                    <li>
-                    <a href="http://www.proprofs.com/quiz-school/story.php?title=ma-real-estate-continuing-education-1contract-law">Quiz 2 - Contract Law</a>
-                    </li>
-                    <li>
-                    <a href="http://www.proprofs.com/quiz-school/story.php?title=ma-real-estate-continuing-education-4rental">Quiz 3 - Residential Rentals</a>
-                    </li>
-                    <li>
-                    <a href="http://www.proprofs.com/quiz-school/story.php?title=1031-exchanges">Quiz 4 - 1031 Exchanges</a>
-                    </li>
-                    <li>
-                    <a href="http://www.proprofs.com/quiz-school/story.php?title=ma-real-estate-continuing-education-3financing">Quiz 5 - Financing</a>
-                    </li>
-                    <li>
-                    <a href="http://www.proprofs.com/quiz-school/story.php?title=93a">Quiz 6 - Chapter 93A</a>
-                    </li>
-                </ul>
-                <ul style="list-style-type:none;line-height:1.5em">
-                    <li>
-                    For Any Technical Questions, please email Mike at <a href="mailto:info@mass-realestateschool.com">info@mass-realestateschool.com</a> or call (978) 979-1061
+                    For Any Technical Questions, please email Mike at <a href="mailto:info@massconstructionschool.com">info@masscontructionschool.com</a> or call (857) 209-4215
                     </li>
                 </ul>
             </center>
