added 'new_account' route/template for google conversion

--- a/cons/templates/layout.html
+++ b/cons/templates/layout.html
@@ -3,7 +3,7 @@
     <head>
         <title>{% block title %}Welcome{% endblock %} | massconstructionschool.com</title>
 
-
+        {% block meta %}{% endblock %}
 
         <script src="{{url_for('static',filename='jquery.min.js')}}"></script>
         <script src="{{url_for('static',filename='jquery-ui.min.js')}}"></script>
